Atuação de experiência: regra tecnologia

--- a/index.html
+++ b/index.html
@@ -369,19 +369,16 @@
                     </div>
                     <div class="details">
                         <p>
-                            Desenvolvimento e manutenção de módulos de sistema ERP desenvolvidos em VB.Net.
+                            Desenvolvimento e manutenção de módulos de sistema ERP utilizando tecnologia VB.Net.
                             Estabelecimento de processos operacionais necessários para o tratamento dos dados,
-                            baseando-se nas definições fornecidas na fase de análise e valendo-se de métodos e técnicas
-                            adequadas aos equipamentos e aplicações que se destinavam.
+                            baseando-se nas definições fornecidas na fase de análise e valendo-se de métodos e
+                            técnicas adequadas aos equipamentos e aplicações que se destinavam.
                         </p>
                         <p>
                             Estudo dos objetivos propostos analisando a viabilidade do processo, levantamento das
-                            características dos dados de entrada e o processamento necessário para a obtenção dos dados
-                            de saída desejado onde era utilizado o Crystal Reports para obtenção dos relatórios finais.
-                        </p>
-                        <p>
-                            Atuação nos processos de Contas a Pagar, Ativo Imobilizado, Ordem de Serviço, Controle de
-                            Acesso e Romaneio de Cargas.
+                            características dos dados de entrada e o processamento necessário para a obtenção dos
+                            dados de saída desejado onde era utilizado o Crystal Reports para obtenção dos relatórios
+                            finais.
                         </p>
                     </div>
                 </div>
