Ajustes na formatação dos projetos

--- a/index.html
+++ b/index.html
@@ -525,14 +525,16 @@
                 <!-- Sétimo Dia -->
                 <div class="item">
                     <span class="project-title">
-                        <a href="#">Sétimo Dia:</a>
+                        <span class="project-title-highlight">Sétimo Dia</span>
                     </span>
                     <span class="project-tagline">
-                        Criação de uma aplicação backend utilizando .Net Core para cálculo do horário aproximado
-                        do pôr do sol de uma região através de suas coordenadas geográficas. Implementação de uma
-                        aplicação web responsável por coletar os dados de localização do navegador do usuário e
-                        informar à API REST, sendo exibido o resultado obtido ao usuário, desenvolvida utilizando
-                        Angular 5.
+                        <p>
+                            Criação de uma aplicação backend utilizando .Net Core para cálculo do horário aproximado
+                            do pôr do sol de uma região através de suas coordenadas geográficas. Implementação de uma
+                            aplicação web responsável por coletar os dados de localização do navegador do usuário e
+                            informar à API REST, sendo exibido o resultado obtido ao usuário, desenvolvida utilizando
+                            Angular 5.
+                        </p>
                     </span>
                 </div>
                 <!-- // Sétimo Dia -->
@@ -540,11 +542,13 @@
                 <!-- ViaCEP -->
                 <div class="item">
                     <span class="project-title">
-                        <a href="https://github.com/ricardorinco/viacep" target="_blank">ViaCEP:</a>
+                        <a href="https://github.com/ricardorinco/viacep" target="_blank">ViaCEP</a>
                     </span>
                     <span class="project-tagline">
-                        Contribuição para a comunidade Angular com o exemplo de utilização do webservice ViaCEP
-                        em formulários reativos.
+                        <p>
+                            Contribuição para a comunidade Angular com o exemplo de utilização do webservice ViaCEP
+                            em formulários reativos.
+                        </p>
                     </span>
                 </div>
                 <!-- // ViaCEP -->
@@ -552,11 +556,13 @@
                 <!-- FinanceAPP -->
                 <div class="item">
                     <span class="project-title">
-                        <a href="https://github.com/ricardorinco/MEAN-Finance" target="_blank">FinanceAPP:</a>
+                        <a href="https://github.com/ricardorinco/MEAN-Finance" target="_blank">FinanceAPP</a>
                     </span>
                     <span class="project-tagline">
-                        Projeto de controle financeiro, desenvolvido para estudo do conceito MEAN
-                        (MongoDB, Express, Angular e Node.js).
+                        <p>
+                            Projeto de controle financeiro, desenvolvido para estudo do conceito MEAN
+                            (MongoDB, Express, Angular e Node.js).
+                        </p>
                     </span>
                 </div>
                 <!-- // FinanceAPP -->
@@ -564,12 +570,14 @@
                 <!-- NFL Teams App -->
                 <div class="item">
                     <span class="project-title">
-                        <a href="https://github.com/ricardorinco/NFLTeamsApp" target="_blank">NFL Teams App:</a>
+                        <a href="https://github.com/ricardorinco/NFLTeamsApp" target="_blank">NFL Teams App</a>
                     </span>
                         <span class="project-tagline">
-                            NFL Teams App é um aplicativo simples que exibe todos os 32 times da liga nacional de
-                            futebol americano (NFL). Foi desenvolvido utilizando Xamarin e está disponível para as
-                            plataformas Android, iOS e Windows.
+                            <p>
+                                Aplicação simples que exibe todos os 32 times da liga nacional de
+                                futebol americano (NFL). Foi desenvolvido utilizando Xamarin e está disponível para as
+                                plataformas Android, iOS e Windows.
+                            </p>
                         </span>
                 </div>
                 <!-- // NFL Teams App -->
@@ -577,11 +585,11 @@
                 <!-- MovieClub -->
                 <div class="item">
                     <span class="project-title">
-                        <a href="https://github.com/ricardorinco/MovieClub" target="_blank">MovieClub:</a>
+                        <a href="https://github.com/ricardorinco/MovieClub" target="_blank">MovieClub</a>
                     </span>
                     <span class="project-tagline">
                         <p>
-                            MovieClub é um aplicativo de buscas de filmes, disponível para a plataforma Android,
+                            Aplicativo de buscas de filmes, disponível para a plataforma Android,
                             desenvolvido utilizando a linguagem nativa, Java.
                         </p>
                         <p>
@@ -596,22 +604,20 @@
                 <!-- RBControl -->
                 <div class="item">
                     <span class="project-title">
-                        <a href="#">RBControl - Sistema de Gerenciamento de Assistência Técnica:</a>
+                        <span class="project-title-highlight">RBControl - Sistema de Gerenciamento de Assistência Técnica</span>
                     </span>
                     <span class="project-tagline">
                         <p>
-                            O RBControl é um sistema totalmente personalizado para o gerenciamento de assistência
-                            técnica, pensado e produzido de acordo com as necessidades da empresa.
+                            Sistema totalmente personalizado para o gerenciamento de assistência técnica, produzido
+                            de acordo com as necessidades da empresa. Desenvolvido utilizando WindowsForms, com base
+                            no Framework .NET (4.0), escrito totalmente em VB.Net, utilizando persistência de dados
+                            em base MySQL.
                         </p>
                         <p>
-                            O projeto foi desenvolvido utilizando WindowsForms, com base no Framework .NET (4.0),
-                            escrito totalmente VB.Net, utilizando banco de dados MySQL.
-                        </p>
-                        <p>
-                            O sistema engloba todos os cadastros necessários para que a empresa mantenha o
-                            gerenciamento em um único software. O intuito principal foi eliminar o uso de diversas
-                            planilhas, centralizando todas as informações em apenas um único local, com isso torna-se
-                            possível a extração de relatórios específicos.
+                            O sistema engloba todos os cadastros necessários para que a empresa mantenha o gerenciamento
+                            em um único software. O intuito principal foi eliminar o uso de diversas planilhas,
+                            centralizando todas as informações em apenas um único local, com isso torna-se possível a
+                            extração de relatórios específicos.
                         </p>
                         <p>
                             Principais Módulos do RBControl:
