Implementação de divisores entre as sections

--- a/index.html
+++ b/index.html
@@ -249,6 +249,8 @@
             </section>
             <!-- // Summary -->
 
+            <hr class="style" />
+
             <!-- Experiences -->
             <section class="section experiences-section">
                 <h2 class="section-title">
@@ -444,6 +446,8 @@
             </section>
             <!-- // Experiences -->
 
+            <hr class="style" />
+
             <!-- Freelance -->
             <section class="section experiences-section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-briefcase"></i></span>Freelances
@@ -518,6 +522,8 @@
             </section>
             <!-- // Freelance -->
 
+            <hr class="style" />
+
             <!-- Projects -->
             <section class="section projects-section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-archive"></i></span>Projetos</h2>
@@ -525,7 +531,7 @@
                 <!-- Sétimo Dia -->
                 <div class="item">
                     <span class="project-title">
-                        <span class="project-title-highlight">Sétimo Dia</span>
+                        <span class="project-title highlight">Sétimo Dia</span>
                     </span>
                     <span class="project-tagline">
                         <p>
@@ -604,7 +610,7 @@
                 <!-- RBControl -->
                 <div class="item">
                     <span class="project-title">
-                        <span class="project-title-highlight">RBControl - Sistema de Gerenciamento de Assistência Técnica</span>
+                        <span class="project-title highlight">RBControl - Sistema de Gerenciamento de Assistência Técnica</span>
                     </span>
                     <span class="project-tagline">
                         <p>
