Atualização do side-menu

--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@
 
             <!-- Education -->
             <div class="education-container container-block">
-                <h2 class="container-block-title">Educação</h2>
+                <h2 class="container-block-title">
+                    <i class="fa-color fas fa-user-graduate"></i>
+                    Educação
+                </h2>
 
                 <!-- Sistemas de Informação -->
                 <div class="item">
@@ -97,7 +100,10 @@
 
             <!-- Training -->
             <div class="education-container container-block">
-                <h2 class="container-block-title">Ministrações</h2>
+                <h2 class="container-block-title">
+                    <i class="fas fa-volume-down"></i>
+                    Ministrações
+                </h2>
 
                 <!-- Angular 8 -->
                 <div class="item">
@@ -109,7 +115,10 @@
 
             <!-- Courses -->
             <div class="education-container container-block">
-                <h2 class="container-block-title">Cursos</h2>
+                <h2 class="container-block-title">
+                    <i class="fas fa-certificate"></i>
+                    Certificados
+                </h2>
 
                 <!-- RWVCPC -->
                 <div class="item">
@@ -196,6 +205,19 @@
                 <!-- // LINQ C# -->
             </div>
             <!-- // Courses -->
+
+            <!-- Languages -->
+            <div class="languages-container container-block">
+                <h2 class="container-block-title">
+                    <i class="fas fa-language"></i>
+                    Idiomas
+                </h2>
+                <ul class="list-unstyled interests-list">
+                    <li>Português <span class="lang-desc">(Nativo)</span></li>
+                    <li>Inglês <span class="lang-desc">(Técnico)</span></li>
+                </ul>
+            </div>
+            <!-- // Languages -->
         </div>
         <!-- // Sidebar -->
 
