Atualização do side-menu

--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
             </div>
             <!--// Contact -->
 
+            <hr class="side-menu-style" />
+
             <!-- Education -->
             <div class="education-container container-block">
                 <h2 class="container-block-title">
@@ -98,6 +100,8 @@
             </div>
             <!-- // Education -->
 
+            <hr class="side-menu-style" />
+
             <!-- Training -->
             <div class="education-container container-block">
                 <h2 class="container-block-title">
@@ -112,6 +116,8 @@
                 <!-- // Angular 8 -->
             </div>
             <!-- // Training -->
+
+            <hr class="side-menu-style" />
 
             <!-- Courses -->
             <div class="education-container container-block">
@@ -206,6 +212,8 @@
             </div>
             <!-- // Courses -->
 
+            <hr class="side-menu-style" />
+
             <!-- Languages -->
             <div class="languages-container container-block">
                 <h2 class="container-block-title">
@@ -261,7 +269,7 @@
             </section>
             <!-- // Summary -->
 
-            <hr class="style" />
+            <hr class="body-style" />
 
             <!-- Experiences -->
             <section class="section experiences-section">
@@ -458,7 +466,7 @@
             </section>
             <!-- // Experiences -->
 
-            <hr class="style" />
+            <hr class="body-style" />
 
             <!-- Freelance -->
             <section class="section experiences-section">
@@ -534,7 +542,7 @@
             </section>
             <!-- // Freelance -->
 
-            <hr class="style" />
+            <hr class="body-style" />
 
             <!-- Projects -->
             <section class="section projects-section">
