Atuação da seção educação: xp educação

--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@
 
                 <!-- Sistemas de Informação -->
                 <div class="item">
+                    <h4 class="degree">Pós Graduação em Arquitetura de Software e Soluções</h4>
+                    <h5 class="meta">XP Educação (IGTI)</h5>
+                    <div class="time">Jan 2022 - Dez 2022</div>
+                </div>
+                <!-- // Sistemas de Informação -->
+
+                <!-- Sistemas de Informação -->
+                <div class="item">
                     <h4 class="degree">Bacharel em Sistemas de Informação</h4>
                     <h5 class="meta">Centro Universitário Padre Anchieta</h5>
                     <div class="time">Jan 2013 - Dez 2016</div>
@@ -246,8 +254,8 @@
                     </p>
 
                     <p>
-                        Bacharel formado com <strong>Honra ao Mérito</strong> em Sistemas de Informação. Focado em
-                        tecnologia para aplicações web.
+                        Pós graduado em <strong>Arquitetura de Software e Soluções</strong> e bacharel formado com <strong>Honra ao 
+                        Mérito</strong> em <strong>Sistemas de Informação</strong>. Focado em tecnologia para aplicações web
                     </p>
                     <p>
                         Experiência em desenvolvimento e manutenção de aplicações <strong>.Net</strong>,
